--- a/index.html
+++ b/index.html
@@ -522,10 +522,10 @@
                   </div>
                   <div class="flex items-center gap-4">
                      <div class="text-sm text-neutral-400">
-                        Desenvolvido por<!-- --> <a href="https://jailsonprado.vercel.app/" target="_blank" rel="noreferrer" class="text-brand-300 hover:text-brand-200 font-medium transition-colors">Jailson Prado</a>
+                        Desenvolvido por<!-- --> <a href="https://vinsmake.vercel.app/" target="_blank" rel="noreferrer" class="text-brand-300 hover:text-brand-200 font-medium transition-colors">Vinsmake</a>
                      </div>
                      <div class="text-neutral-600">•</div>
-                     <a href="https://jailson-link-page.vercel.app/" target="_blank" rel="noreferrer" class="inline-flex items-center gap-2 bg-brand-600/20 hover:bg-brand-600/30 text-brand-300 hover:text-brand-200 px-3 py-1 rounded-full text-sm font-medium transition-all duration-200 border border-brand-500/20">
+                     <a href="https://vinsmake.vercel.app/" target="_blank" rel="noreferrer" class="inline-flex items-center gap-2 bg-brand-600/20 hover:bg-brand-600/30 text-brand-300 hover:text-brand-200 px-3 py-1 rounded-full text-sm font-medium transition-all duration-200 border border-brand-500/20">
                         <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                            <path fill-rule="evenodd" d="M4.25 5.5a.75.75 0 00-.75.75v8.5c0 .414.336.75.75.75h8.5a.75.75 0 00.75-.75v-4a.75.75 0 011.5 0v4A2.25 2.25 0 0112.75 17h-8.5A2.25 2.25 0 012 14.75v-8.5A2.25 2.25 0 014.25 4h5a.75.75 0 010 1.5h-5z" clip-rule="evenodd"></path>
                            <path fill-rule="evenodd" d="M6.194 12.753a.75.75 0 001.06.053L16.5 4.44v2.81a.75.75 0 001.5 0v-4.5a.75.75 0 00-.75-.75h-4.5a.75.75 0 000 1.5h2.553l-9.056 8.194a.75.75 0 00-.053 1.06z" clip-rule="evenodd"></path>
