--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <h2 class="font-display text-3xl sm:text-4xl lg:text-5xl text-gray-900 mb-4">Conheça a Maria Eduarda</h2>
                   <div class="w-24 h-1 bg-gradient-to-r from-brand-600 to-accent-500 mx-auto rounded-full"></div>
                </div>
-               <div class="backdrop-blur-lg bg-white/40 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
+               <div class="bg-white/95 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
                   <div class="grid lg:grid-cols-2 gap-12 items-center">
                      <div class="relative order-2 lg:order-1">
                         <div class="absolute -top-6 -left-6 w-24 h-24 bg-brand-300 rounded-full opacity-30 blur-xl"></div>
@@ -315,7 +315,7 @@
                   <p class="text-lg text-gray-600 max-w-2xl mx-auto">Esclarecemos as principais dúvidas sobre o processo terapêutico e nossos atendimentos</p>
                   <div class="w-24 h-1 bg-gradient-to-r from-brand-600 to-accent-500 mx-auto mt-6 rounded-full"></div>
                </div>
-               <div class="backdrop-blur-lg bg-white/40 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
+               <div class="bg-white/95 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
                   <div class="space-y-4">
                      <div class="bg-white/50 border border-white/30 rounded-2xl overflow-hidden transition-all duration-300 hover:shadow-lg">
                         <button class="w-full p-6 text-left flex items-center justify-between hover:bg-white/20 transition-colors">
