--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <h2 class="font-display text-3xl sm:text-4xl lg:text-5xl text-gray-900 mb-4">Conheça a Maria Eduarda</h2>
                   <div class="w-24 h-1 bg-gradient-to-r from-brand-600 to-accent-500 mx-auto rounded-full"></div>
                </div>
-               <div class="bg-white/95 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
+               <div class="backdrop-blur-lg bg-white/40 border border-white/20 rounded-3xl shadow-2xl p-8 lg:p-12">
                   <div class="grid lg:grid-cols-2 gap-12 items-center">
                      <div class="relative order-2 lg:order-1">
                         <div class="absolute -top-6 -left-6 w-24 h-24 bg-brand-300 rounded-full opacity-30 blur-xl"></div>
