tira barra de rolagem

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
       <link rel="icon" href="images/favicon.png">
       <meta name="next-size-adjust">
       <script src="js/polyfills-78c92fac7aa8fdd8.js" nomodule=""></script>
+      <style>
+   @media (max-width: 768px) {
+      ::-webkit-scrollbar {
+         display: none;
+      }
+      html {
+         scrollbar-width: none;
+         -ms-overflow-style: none;
+      }
+   }
+</style>
    </head>
    <body>
       <script type="application/ld+json">{"@context":"https://schema.org","@type":"ProfessionalService","name":"Maria Eduarda - Psicóloga","url":"https://www.mariaeduardapsico.com","image":"https://www.mariaeduardapsico.com/hero.webp","description":"Atendimento psicológico humanizado, com sessões online e presenciais. Acolhimento e autoconhecimento.","telephone":"+55 28 99964-7361","address":{"@type":"PostalAddress","addressCountry":"BR"},"areaServed":"BR"}</script>
