--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="text-brand-600 font-semibold text-lg sm:text-xl tracking-wide">PSICÓLOGA CLÍNICA</p>
                      </div>
                      <div class="relative backdrop-blur-sm bg-white/20 border border-white/30 rounded-3xl p-4 shadow-2xl">
-                        <div class="relative aspect-[3/4] lg:aspect-[4/5] rounded-2xl overflow-hidden bg-gradient-to-br from-brand-100 to-white"><img alt="Maria Eduarda - Psicóloga Clínica" fetchpriority="high" decoding="async" data-nimg="fill" class="object-cover" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-position:center 45%;color:transparent" sizes="100vw" srcset="images/image_4.jpg 640w, images/image_5.jpg 750w, images/image_1.jpg 828w, images/image.jpg 1080w, images/image_7.webp 1200w, images/image_11.webp 1920w, images/image_14.webp 2048w, images/image_2.webp 3840w" src="images/image_2.webp"></div>
+                        <div class="relative w-full rounded-2xl overflow-hidden shadow-2xl"><img alt="Maria Eduarda" src="images/hero.webp" class="w-full h-auto object-cover block"></div>
                      </div>
                      <div class="absolute -bottom-6 left-1/2 transform -translate-x-1/2 bg-white/90 backdrop-blur-sm border border-white/50 rounded-2xl px-4 py-2 shadow-lg">
                         <div class="flex items-center gap-2 text-sm">
@@ -172,9 +172,11 @@
                      <div class="relative order-2 lg:order-1">
                         <div class="absolute -top-6 -left-6 w-24 h-24 bg-brand-300 rounded-full opacity-30 blur-xl"></div>
                         <div class="absolute -bottom-6 -right-6 w-32 h-32 bg-accent-300 rounded-full opacity-25 blur-xl"></div>
-                        <div class="relative aspect-[3/4] rounded-2xl overflow-hidden shadow-xl bg-gradient-to-br from-brand-100 to-white p-2">
-                           <div class="relative w-full h-full rounded-xl overflow-hidden"><img alt="Maria Eduarda Caetano - Psicóloga" loading="lazy" decoding="async" data-nimg="fill" class="object-cover" style="position:absolute;height:100%;width:100%;left:0;top:0;right:0;bottom:0;object-position:center 45%;color:transparent" sizes="100vw" srcset="images/image_6.jpg 640w, images/image_7.jpg 750w, images/image_2.jpg 828w, images/image_3.jpg 1080w, images/image_13.webp 1200w, images/image_12.webp 1920w, images/image_15.webp 2048w, images/image_1.webp 3840w" src="images/image_1.webp"></div>
-                        </div>
+                        <div class="relative w-full rounded-2xl overflow-hidden shadow-xl bg-gradient-to-br from-brand-100 to-white p-2">
+                       <div class="relative w-full rounded-xl overflow-hidden">
+                       <img alt="Maria Eduarda Caetano - Psicóloga" src="images/image_1.webp" class="w-full h-auto object-cover block">
+                      </div>
+                      </div>
                      </div>
                      <div class="order-1 lg:order-2 space-y-6">
                         <div class="space-y-4">
@@ -233,22 +235,22 @@
          <h2 class="text-3xl sm:text-4xl font-display text-gray-900 text-center">Como posso ajudar</h2>
          <div class="mt-10 grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
             <div class="rounded-2xl border border-gray-100 bg-white p-6 shadow-sm hover:shadow-md transition-shadow">
-               <div class="text-3xl">🧠</div>
+               <img src="images/icone-cerebro.webp" alt="Ícone Terapia" class="w-10 h-10 object-contain mb-3">
                <h3 class="mt-3 text-lg font-semibold text-gray-900">Terapia Individual</h3>
                <p class="mt-2 text-gray-600 text-sm">Acompanhamento personalizado para suas necessidades.</p>
             </div>
             <div class="rounded-2xl border border-gray-100 bg-white p-6 shadow-sm hover:shadow-md transition-shadow">
-               <div class="text-3xl">💞</div>
-               <h3 class="mt-3 text-lg font-semibold text-gray-900">Terapia de Casal</h3>
-               <p class="mt-2 text-gray-600 text-sm">Fortalecimento do diálogo e vínculos afetivos.</p>
+               <img src="images/icone-chat.webp" alt="Ícone Autoconhecimento" class="w-10 h-10 object-contain mb-3">
+               <h3 class="mt-3 text-lg font-semibold text-gray-900">Relacionamentos</h3>
+               <p class="mt-2 text-gray-600 text-sm">Fortalecimento de vínculos e melhora da comunicação.</p>
             </div>
             <div class="rounded-2xl border border-gray-100 bg-white p-6 shadow-sm hover:shadow-md transition-shadow">
-               <div class="text-3xl">🌿</div>
+               <img src="images/icone-lotus.webp" alt="Ícone Ansiedade" class="w-10 h-10 object-contain mb-3">
                <h3 class="mt-3 text-lg font-semibold text-gray-900">Apoio à Ansiedade</h3>
                <p class="mt-2 text-gray-600 text-sm">Estratégias para manejo da ansiedade e do estresse.</p>
             </div>
             <div class="rounded-2xl border border-gray-100 bg-white p-6 shadow-sm hover:shadow-md transition-shadow">
-               <div class="text-3xl">✨</div>
+               <img src="images/icone-abraco.webp" alt="Ícone Relacionamentos" class="w-10 h-10 object-contain mb-3">
                <h3 class="mt-3 text-lg font-semibold text-gray-900">Autoconhecimento</h3>
                <p class="mt-2 text-gray-600 text-sm">Exploração de padrões e construção de novos caminhos.</p>
             </div>
